--- a/meetup/package.json
+++ b/meetup/package.json
@@ -6,8 +6,19 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/hookrouter": "^2.2.2",
+    "@types/react-router-dom": "^5.1.5",
+    "axios": "^0.19.2",
+    "hookrouter": "^1.2.3",
+    "moment": "^2.27.0",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^5.7.2",
+    "react-hooks-router": "^0.3.2",
+    "react-moment": "^0.9.7",
+    "react-router-config": "^5.1.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
